[workspace]
resolver = "2"
members = ["crates/operant-core", "crates/operant-envs", "crates/operant-python"]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["goshea"]

[workspace.dependencies]
operant-core = { path = "crates/operant-core" }
operant-envs = { path = "crates/operant-envs" }
rand = "0.8"
rand_xoshiro = "0.6"
pyo3 = { version = "0.27", features = ["extension-module"] }
numpy = "0.27"
