[package]
name = "operant-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core traits and vectorization for Operant RL library"

[dependencies]
rand = { workspace = true }
rand_xoshiro = { workspace = true }

[dev-dependencies]
