[package]
name = "operant"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "High-performance SIMD-optimized reinforcement learning environments"
readme = "../../README.md"

[features]
default = ["simd"]
simd = ["operant-envs/simd"]
parallel = ["operant-envs/parallel"]

[dependencies]
operant-core = { workspace = true }
operant-envs = { workspace = true }
